--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:layout_weight="1"
-        android:layout_margin="7dp"
+        android:layout_weight="3"
+        android:layout_margin="2dp"
         android:gravity="center"/>
 
     <EditText
@@ -22,7 +22,7 @@
         android:layout_margin="20dp"
         android:layout_weight="2"
         android:gravity="center"
-        android:hint="User Name"
+        android:hint="Username"
         android:password="false" />
 
 
@@ -68,4 +68,11 @@
             android:textAllCaps="false"
             android:text="Register"/>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="1"
+        android:layout_margin="2dp"
+        android:gravity="center"/>
 </LinearLayout>
